--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,125 @@
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* Primary */
+  --Red-400: hsl(7, 99%, 70%);
+  --Yellow-500: hsl(51, 100%, 49%);
+  --Green-800: hsl(167, 40%, 24%); /* (graphic design text) */
+  --Blue-800: hsl(198, 62%, 26%); /* (photography text) */
+  --Green-500: hsl(167, 34%, 41%); /* (footer) */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* Neutral */
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --Grey-950: hsl(212, 27%, 19%);
+  --Grey-600: hsl(213, 9%, 39%);
+  --Grey-550: hsl(232, 10%, 55%);
+  --Grey-400: hsl(210, 4%, 67%);
+  --White: hsl(0, 100%, 100%);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+/* Typography */
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-family: "Fraunces", serif;
+  font-size: 42px;
+  line-height: 125%;
+  letter-spacing: 6px;
+  color: var(--White);
+}
+
+h2 {
+  font-family: "Fraunces", serif;
+  font-size: 32px;
+  line-height: 125%;
+  letter-spacing: 0px;
+  color: var(--Grey-950);
+}
+
+/* Graphic design  */
+h3 {
+  font-family: "Fraunces", serif;
+  font-size: 28px;
+  line-height: 125%;
+  letter-spacing: 0px;
+  color: var(--Green-800);
+}
+
+/* Testimonials */
+h4 {
+  font-family: "Fraunces", serif;
+  font-size: 20px;
+  line-height: 125%;
+  letter-spacing: 4px;
+  color: var(--Grey-400);
+}
+
+/* Testimonial and main */
+p {
+  font-family: "Barlow", sans-serif;
+  font-size: 18px;
+  line-height: 165%;
+  letter-spacing: 0px;
+  color: var(--Grey-600); /* or 550 */
+}
+
+p.alt {
+  font-family: "Barlow", sans-serif;
+  font-size: 15px;
+  line-height: 170%;
+  letter-spacing: 0px;
+}
+
+p.name {
+  font-family: "Fraunces", serif;
+  font-size: 18px;
+  line-height: 125%;
+  letter-spacing: 0px;
+  color: var(--Grey-950);
+}
+
+p.title {
+  font-family: "Barlow", sans-serif;
+  font-size: 12px;
+  line-height: 180%;
+  letter-spacing: 0px;
+  color: var(--Grey-400);
+}
+
+p.footer {
+  font-family: "Barlow", sans-serif;
+  font-size: 18px;
+  line-height: 165%;
+  letter-spacing: 0px;
+  color: var(--Green-500);
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-family: "Fraunces", serif;
+  font-size: 15px;
+  line-height: 165%;
+  letter-spacing: 1px;
+  color: var(--Grey-950);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 56px;
+    line-height: 125%;
+    letter-spacing: 9px;
   }
-  a:hover {
-    color: #747bff;
+
+  h2 {
+    font-size: 40px;
+    line-height: 125%;
   }
-  button {
-    background-color: #f9f9f9;
+
+  p.alt {
+    font-size: 16px;
+  }
+
+  p.title {
+    font-size: 14px;
   }
 }
