--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* border: 1px solid red; */
 }
 
 html {
@@ -50,6 +51,7 @@ h2 {
   line-height: 125%;
   letter-spacing: 0px;
   color: var(--Grey-950);
+  font-weight: 900;
 }
 
 /* Graphic design  */
@@ -117,12 +119,30 @@ p.footer {
   color: var(--Grey-550);
 }
 
-button {
+.main-content-link {
   font-family: "Fraunces", serif;
-  font-size: 15px;
-  line-height: 165%;
+  font-size: 14px;
+  line-height: 155%;
   letter-spacing: 1px;
   color: var(--Grey-950);
+  text-transform: uppercase;
+  font-weight: 800;
+  position: relative;
+  cursor: pointer;
+}
+
+.main-content-link::after {
+  content: "";
+  position: absolute;
+  background: var(--yellow);
+  bottom: 0.48rem;
+  left: 0;
+  min-width: 100%;
+  min-height: 1.12rem;
+  z-index: -1;
+  border-radius: 0.8rem;
+  transition: 0.35s;
+  opacity: 0.5;
 }
 
 @media screen and (min-width: 768px) {
@@ -151,6 +171,7 @@ button {
   }
 }
 
+/* Header */
 header {
   height: 100vh;
   width: 100%;
@@ -194,10 +215,11 @@ header nav {
   top: 75px;
   background-color: var(--White);
   height: 300px;
-  width: 327px;
+  width: 90vw;
   gap: 1.7rem;
   align-items: center;
   padding: 2.3rem;
+  z-index: 10;
 }
 
 .nav-menu.open::after {
@@ -253,7 +275,41 @@ header nav {
   animation: arrowMove 3s infinite;
 }
 
+/* Main */
+main article {
+  flex-basis: 100%;
+  min-height: 85vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.main-content-wrapper {
+  padding: 3rem 1.3rem;
+  width: 100%;
+}
+
+.main-content-text {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 1.3rem;
+}
+
+.main-image {
+  width: 100%;
+  aspect-ratio: 375 / 312;
+}
+
+.main-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media screen and (min-width: 768px) {
+  /* Header */
   header {
     height: 800px;
     background-image: url("/desktop/image-header.jpg");
@@ -263,8 +319,15 @@ header nav {
   header nav {
     height: 33px;
   }
+
+  /* Main */
+  .main-image {
+    width: 768px;
+    aspect-ratio: 768 / 600;
+  }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1440px) {
+  /* Header */
   header {
     background-image: url("/desktop/image-header.jpg");
   }
@@ -290,6 +353,12 @@ header nav {
   .nav-item.contact a:hover {
     background-color: var(--White-light);
     color: var(--White);
+  }
+
+  /* Main */
+  .main-image {
+    width: 720px;
+    aspect-ratio: 720 / 600;
   }
 }
 
