--- a/src/index.css
+++ b/src/index.css
@@ -324,7 +324,7 @@ main article {
 .secondary {
   width: 100%;
   height: 600px;
-  padding: 3rem 1.3rem;
+  padding: 3rem 1rem;
   background-color: var(--Green-500);
   display: flex;
   flex-direction: column;
@@ -360,8 +360,17 @@ main article {
 
   /* Main */
   .main-image {
-    width: 768px;
+    width: 100%;
     aspect-ratio: 768 / 600;
+  }
+
+  .main-content-wrapper {
+    padding: 3rem 8.8rem 4rem;
+    width: 100%;
+  }
+
+  .secondary {
+    padding: 3rem 11.9rem;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -394,9 +403,53 @@ main article {
   }
 
   /* Main */
+
+  main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+
   .main-image {
-    width: 720px;
+    width: 100%;
     aspect-ratio: 720 / 600;
+    height: 100%;
+  }
+
+  .main-first,
+  .main-second,
+  .main-third {
+    display: contents;
+  }
+
+  .first {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .second {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  .third {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .fourth {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .fifth {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .sixth {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+
+  .main-content-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main-content-text {
+    text-align: start;
+    gap: 1.7rem;
   }
 }
 
