--- a/src/index.css
+++ b/src/index.css
@@ -71,10 +71,11 @@ h3 {
 /* Testimonials */
 h4 {
   font-family: "Fraunces", serif;
-  font-size: 20px;
+  font-size: 17px;
   line-height: 125%;
   letter-spacing: 4px;
   color: var(--Grey-400);
+  text-transform: uppercase;
 }
 
 /* Testimonial and main */
@@ -83,7 +84,8 @@ p {
   font-size: 18px;
   line-height: 165%;
   letter-spacing: 0px;
-  color: var(--Grey-600); /* or 550 */
+  color: var(--Grey-550); /* or 550 */
+  font-weight: 600;
 }
 
 p.alt {
@@ -101,6 +103,8 @@ p.name {
   line-height: 125%;
   letter-spacing: 0px;
   color: var(--Grey-950);
+  font-weight: 900;
+  margin-bottom: 0.4rem;
 }
 
 p.title {
@@ -136,6 +140,12 @@ p.footer {
   h2 {
     font-size: 40px;
     line-height: 125%;
+  }
+
+  /* Testimonials */
+  h4 {
+    font-size: 20px;
+    margin-bottom: 1rem;
   }
 
   p.alt {
@@ -346,6 +356,45 @@ main article {
   gap: 1.5rem;
 }
 
+/* Testimonials */
+
+.testimonials {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding: 4rem 1.3rem;
+  text-align: center;
+}
+
+.testimonials-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.7rem;
+}
+
+.card-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.7rem;
+}
+
+.card-top img {
+  width: 72px;
+  border-radius: 100%;
+}
+
+.card-top .card-description {
+  color: var(--Grey-600);
+}
+
 @media screen and (min-width: 768px) {
   /* Header */
   header {
@@ -372,6 +421,28 @@ main article {
   .secondary {
     padding: 3rem 11.9rem;
   }
+
+  /* Testimonials */
+
+  .testimonials {
+    gap: 3rem;
+    padding: 4rem 4.6rem;
+  }
+
+  .testimonials-wrapper {
+    gap: 4rem;
+  }
+
+  .card {
+    gap: 1.7rem;
+  }
+
+  /* .card-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.7rem;
+} */
 }
 @media screen and (min-width: 1440px) {
   /* Header */
@@ -450,6 +521,27 @@ main article {
   .main-content-text {
     text-align: start;
     gap: 1.7rem;
+  }
+
+  /* Testimonials */
+
+  .testimonials {
+    gap: 3rem;
+    padding: 9rem 8rem;
+  }
+
+  .testimonials-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+  }
+
+  .card {
+    gap: 4rem;
+  }
+
+  .card-top .card-description {
+    margin-top: 1.5rem;
   }
 }
 
