--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,9 @@
   --Red-400: hsl(7, 99%, 70%);
   --Yellow-500: hsl(51, 100%, 49%);
   --Green-800: hsl(167, 40%, 24%); /* (graphic design text) */
-  --Green-600: hsl(166, 30%, 35%); /* (graphic design text) */
-  --Green-500: hsl(167, 34%, 41%); /* (footer) */
+  --Green-600: #3e7468; /* (graphic design text) */
+  /* --Green-500: hsl(167, 34%, 41%); (footer) */
+  --Green-300: hsl(168, 44%, 70%); /* (footer) */
   --Blue-800: hsl(198, 62%, 26%); /* (photography text) */
 
   /* Neutral */
@@ -17,7 +18,7 @@
   --Grey-600: hsl(213, 9%, 39%);
   --Grey-550: hsl(232, 10%, 55%);
   --Grey-400: hsl(210, 4%, 67%);
-  --White: hsl(0, 100%, 100%);
+  --White: hsl(0, 0%, 100%);
   --White-light: hsla(0, 0%, 100%, 0.25);
 }
 
@@ -37,6 +38,11 @@ html {
 .site-wrapper {
   width: 100vw;
 }
+
+li {
+  list-style: none;
+}
+
 /* Typography */
 
 h1 {
@@ -128,6 +134,15 @@ p.footer {
   font-size: 20px;
   line-height: 125%;
   color: var(--Grey-550);
+}
+
+.footer-link {
+  font-family: "Barlow", sans-serif;
+  text-decoration: none;
+  color: var(--Green-600);
+  font-size: 17px;
+  line-height: 165%;
+  font-weight: 600;
 }
 
 @media screen and (min-width: 768px) {
@@ -411,6 +426,62 @@ main article {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* Footer */
+footer {
+  height: 350px;
+  background-color: var(--Green-300);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4rem 2.125rem;
+}
+
+.footer-content {
+  height: 100%;
+  max-width: 298px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+
+footer .logo {
+  height: 33px;
+  width: 170px;
+  filter: invert(41%) sepia(29%) saturate(603%) hue-rotate(116deg)
+    brightness(70%) contrast(82%);
+}
+
+.footer-nav-links,
+.footer-socials {
+  display: flex;
+}
+.footer-nav-links a {
+  transition: color 0.3s ease-in-out;
+}
+.footer-nav-links a:hover {
+  color: var(--White);
+}
+
+.footer-socials img:hover {
+  transition: 0.3s ease-in-out;
+}
+.footer-socials img:hover {
+  filter: brightness(0) invert(1);
+}
+
+.footer-nav-links {
+  gap: 2.5rem;
+}
+
+.footer-socials {
+  gap: 1.5rem;
+}
+
+.footer-socials {
+  margin-top: auto;
 }
 
 @media screen and (min-width: 768px) {
